--- a/css/site.css
+++ b/css/site.css
@@ -1,17 +1,101 @@
+body {
+  font-family: "Uchen";
+  margin: 0;
+  background-color: #d1cec3;
+}
+
+[class*="col-"] {
+  float: left;
+  padding: 15px;
+}
 a:link{
     background-color: auto;
     text-decoration: none;
 }
 
 a:visited {
-  background-color: #D46242;
+  background-color: black;
 }
 
 a:hover {
-    text-decoration: underline;
     background-color: #D46242;
 }
 
 a:active {
   background-color: black;
+}
+
+.header {
+  padding: 15px;
+  background-color: #ddd8b4;
+  font-size: 20px;
+  text-align: center;
+}
+
+.menu ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  background-color: #d1cec3;
+
+}
+
+.menu li {
+  padding: 8px;
+  margin-bottom: 7px;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  background-color: #f9f5a2;
+}
+
+.menu li:hover {
+  background-color: #ddd8b4;
+}
+
+.aside {
+ background-color: #f1d0a6;
+ padding: 15px;
+ text-align: center;
+ font-size: 14px;
+ box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+}
+
+* {
+  box-sizing: border-box;
+}
+
+@media screen and (max-width: 768px) {
+  [class*="col-"] {
+    width: 100%
+  }
+}
+
+.row::after {
+  content: "";
+  display: block;
+  clear: both;
+}
+
+p {
+  font-size: 20px;
+  padding: 10px;
+}
+
+.col-1 {width: 8.33%;}
+.col-2 {width: 16.66%;}
+.col-3 {width: 25%;}
+.col-4 {width: 33.33%;}
+.col-5 {width: 41.66%;}
+.col-6 {width: 50%;}
+.col-7 {width: 58.33%;}
+.col-8 {width: 66.66%;}
+.col-9 {width: 75%;}
+.col-10 {width: 83.33%;}
+.col-11 {width: 91.66%;}
+.col-12 {width: 100%;}
+
+.footer {
+  padding: 28px;
+  text-align: center;
+  background-color:  #ffcd85;
+  font-size: 20px;
 }
