--- a/lab5/css/lab.css
+++ b/lab5/css/lab.css
@@ -4,6 +4,9 @@ body {
      padding: 25px;
      font-size: 22px;
  }
+  img {
+    float: right;
+  }
 
  div#content {
      padding: 8px;
@@ -11,7 +14,7 @@ body {
      border: ridge 15px white;
      outline-style: solid;
      outline-color: invert;
-     height: 80vh;
+     height: 100%;
  }
 
  a:link{
