--- a/lab5/css/lab.css
+++ b/lab5/css/lab.css
@@ -1,5 +1,5 @@
 body {
-     font-family: "Cinzel Decorative";
+     font-family: "Glory";
      background-color: black;
      padding: 25px;
      font-size: 22px;
