--- a/lab18/css/bootstrap.css
+++ b/lab18/css/bootstrap.css
@@ -4,3 +4,14 @@
   font-size: 20px;
   text-align: center;
 }
+
+.row::after {
+  content: "";
+  display: block;
+  clear: both;
+}
+
+.col-sm-4 {
+  width: 33.33%;
+  text-align: center;
+}
