--- a/midterm/css/lab.css
+++ b/midterm/css/lab.css
@@ -109,6 +109,7 @@ background: linear-gradient(217deg, rgba(255,0,0,.8), rgba(255,0,0,0) 70.71%),
 .topnav {
  background-color: #333;
  overflow: hidden;
+ background-color: black;
 }
 
 /* Style the links inside the navigation bar */
@@ -139,6 +140,7 @@ body {
 
 .glow {
   font-size: 80px;
+  font-family: "Courgette";
   color: #fff;
   text-align: center;
   animation: glow 1s ease-in-out infinite alternate;
@@ -150,6 +152,6 @@ body {
   }
 
   to {
-    text-shadow: 0 0 20px #fff, 0 0 30px #ff4da6, 0 0 40px #ff4da6, 0 0 50px #ff4da6, 0 0 60px #ff4da6, 0 0 70px #ff4da6, 0 0 80px #ff4da6;
+    text-shadow: 0 0 20px #fff, 0 0 30px #ff4da6, 0 0 40px #ff4da6, 0 0 50px #ff4da6 0 0 60px #ff4da6, 0 0 70px #ff4da6, 0 0 80px #b1add6;
   }
 }
