--- a/midterm/css/lab.css
+++ b/midterm/css/lab.css
@@ -2,7 +2,7 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   margin: 0;
   text-align: center;
-  background-image: url("https://thumbs.gfycat.com/AnyFaithfulHylaeosaurus-mobile.mp4");
+  background-color: grey;
 }
 
 html {
@@ -93,7 +93,8 @@ background: linear-gradient(217deg, rgba(255,0,0,.8), rgba(255,0,0,0) 70.71%),
 .footer {
   padding: 20px;
   text-align: center;
-  background: #ddd;
+  background: black;
+  color: white;
 }
 
 .main {
