--- a/midterm/css/lab.css
+++ b/midterm/css/lab.css
@@ -138,7 +138,7 @@ background: linear-gradient(217deg, rgba(255,0,0,.8), rgba(255,0,0,0) 70.71%),
 }
 
 body {
-  background-color: black;
+  background-color: lavender;
 }
 
 .glow {
