--- a/midterm/css/lab.css
+++ b/midterm/css/lab.css
@@ -24,6 +24,15 @@ h1 {
   color: white;
 }
 
+h3 {
+  font-size: 30px;
+}
+
+h4 {
+  color: white;
+  font-size: 50px;
+}
+
 img{
 background: linear-gradient(217deg, rgba(255,0,0,.8), rgba(255,0,0,0) 70.71%),
               linear-gradient(127deg, rgba(0,255,0,.8), rgba(0,255,0,0) 70.71%),
@@ -112,7 +121,7 @@ background: linear-gradient(217deg, rgba(255,0,0,.8), rgba(255,0,0,0) 70.71%),
 .topnav {
  background-color: #333;
  overflow: hidden;
- background-color: black;
+ background-color: black\;
 }
 
 /* Style the links inside the navigation bar */
@@ -138,7 +147,7 @@ background: linear-gradient(217deg, rgba(255,0,0,.8), rgba(255,0,0,0) 70.71%),
 }
 
 body {
-  background-color: lavender;
+  background-color: #CDBEB1;
 }
 
 .glow {
@@ -157,4 +166,47 @@ body {
   to {
     text-shadow: 0 0 20px #fff, 0 0 30px #ff4da6, 0 0 40px #ff4da6, 0 0 50px #ff4da6 0 0 60px #ff4da6, 0 0 70px #ff4da6, 0 0 80px #b1add6;
   }
+}
+
+/* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.modal-content {
+  background-color: #fefefe;
+  margin: 15% auto; /* 15% from the top and centered */
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%; /* Could be more or less, depending on screen size */
+}
+
+/* The Close Button */
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+button {
+  background-color: black;
+  color: white;
 }
