--- a/midterm/css/lab.css
+++ b/midterm/css/lab.css
@@ -20,12 +20,18 @@ html {
   background-image: url("https://thumbs.gfycat.com/AnyFaithfulHylaeosaurus-mobile.mp4");
 }
 
+p{
+  text-decoration: underline;
+  text-decoration-color: white;
+}
+
 h1 {
   color: white;
 }
 
 h3 {
-  font-size: 30px;
+  font-size: 25px;
+  color: white;
 }
 
 h4 {
@@ -121,7 +127,7 @@ background: linear-gradient(217deg, rgba(255,0,0,.8), rgba(255,0,0,0) 70.71%),
 .topnav {
  background-color: #333;
  overflow: hidden;
- background-color: black\;
+ background-color: #373737;
 }
 
 /* Style the links inside the navigation bar */
@@ -142,12 +148,12 @@ background: linear-gradient(217deg, rgba(255,0,0,.8), rgba(255,0,0,0) 70.71%),
 
 /* Add a color to the active/current link */
 .topnav a.active {
- background-color: orange;
+ background-color: #b7b7af;
  color: white;
 }
 
 body {
-  background-color: #CDBEB1;
+  background-color: #373737;
 }
 
 .glow {
